<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.jiahan.fave.core.callback.ForceLogoutViewViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/margin_large_extra"
        android:visibility="@{viewModel.forceLogoutVisibility, default=gone}"
        tools:visibility="visible">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_force_logout" />

        <com.jiahan.fave.core.widget.NunitoExtraBoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/msg_app_logout_title"
            android:textColor="@color/light_black"
            android:textSize="@dimen/text_size_16" />

        <com.jiahan.fave.core.widget.NunitoRegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/msg_app_logout"
            android:textSize="@dimen/text_size_14" />

        <com.jiahan.fave.core.widget.NunitoExtraBoldTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@{viewModel.logoutButtonBackground}"
            android:gravity="center"
            android:onClick="@{viewModel::onLogoutClicked}"
            android:padding="@dimen/margin_large_extra"
            android:text="@string/msg_app_logout_button"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16"
            app:lineHeight="@dimen/text_line_height_18"
            tools:background="@color/colorPrimary" />
    </LinearLayout>
</layout>